--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,10 +27,14 @@ body {
 }
 
 #debug {
-	padding: 0 4px;
 	top: 0;
 	left: 0;
 	position: absolute;
+}
+
+#debug span {
+	display: inline-block;
+	padding: 0 4px;
 	background-color: rgba(0, 0, 0, .5);
 	color: #FFF;
 }
