--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,3 +38,5 @@ body {
 	background-color: rgba(0, 0, 0, .5);
 	color: #FFF;
 }
+
+#undefined:hover {background-color: rgba(255, 255, 255, .4) !important}
