--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,3 +41,8 @@ body {
 
 .slot:hover {background-color: rgba(255, 255, 255, .4)}
 /*.item:hover {opacity: .4}*/
+
+.stack-count {
+	color: #FFF;
+	text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+}
