--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,7 @@
 body {
 	margin: 0;
 	overflow: hidden;
+	cursor: default;
 	text-rendering: optimizeLegibility;
 	font-family: minecraft_regular;
 	font-size: 20px;
@@ -52,10 +53,44 @@ body {
 	color: #FFF;
 }
 
-.slot:hover {background-color: rgba(255, 255, 255, .4)}
-/*.item:hover {opacity: .4}*/
+.slots {
+	position: absolute;
+	z-index: 2;
+}
+
+.slot::before {
+	content: "";
+	width: 32px;
+	height: 32px;
+	margin: 2px;
+	position: absolute;
+}
+.slot:hover::before {background-color: rgba(255, 255, 255, .5)}
 
 .stack-count {
 	color: #FFF;
 	text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
+
+.tooltip {
+	/*display: none;*/
+	width: fit-content;
+	height: fit-content;
+	margin: auto;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	padding: 2px 4px 0 6px;
+	position: absolute;
+	opacity: .9375; /* .936 - .939 */
+	border: 2px solid #000;
+	box-shadow: inset 0 0 0 2px #23005A;
+	background-color: #100010;
+	color: #FFF;
+	z-index: 999;
+}
+
+/*#23005a on black */
+/*#2c0863 on lightgrey*/
+/*#290560 on grey*/
