--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,11 @@ body {
 	font-size: 20px;
 }
 
+.scene {
+	position: absolute;
+	z-index: -1;
+}
+
 .layer {
 	position: absolute;
 	image-rendering: -moz-crisp-edges;
