Canvas text printer, ivnerted crosshair test

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,11 +34,19 @@ body {
 
 .layer {
 	position: absolute;
+	image-rendering: -moz-crisp-edges;
+	image-rendering: -webkit-crisp-edges;
+	image-rendering: pixelated;
+	image-rendering: crisp-edges;
 }
 
 #container-layer, #menu-layer {
 	background-color: rgba(0, 0, 0, .7);
 	z-index: 1;
+}
+
+#ui-layer {
+	/*mix-blend-mode: difference;*/
 }
 
 .slots {
