--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,16 +1,15 @@
+@import url(scene.css);
 @import url(layer.css);
 @import url(tooltip.css);
 
 body {
 	margin: 0;
 	overflow: hidden;
+	background-color: #000;
 	cursor: default;
 }
 
-.scene {
-	position: absolute;
-	z-index: -1;
-}
+/* TO-DO: Remove slots DOM */
 
 .slots {
 	position: absolute;
@@ -26,7 +25,8 @@ body {
 }
 .slot:hover::before {background-color: rgba(255, 255, 255, .5)}
 
-.stack-count {
-	color: #FFF;
-	text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+.pages {
+	position: absolute;
+	background-color: #FFFFFF4E;
+	z-index: 9;
 }
