--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,7 @@ body {
 	justify-content: center;
 	margin: 0;
 	overflow: hidden;
-	background-color: #000;
+	background-color: #fff;
 	cursor: default;
 }
 
