--- a/assets/css/tooltip.css
+++ b/assets/css/tooltip.css
@@ -2,11 +2,14 @@
 /* Inner border (top) color = #26005FF5 */
 /* Inner border (bottom) color = #180035F5 */
 
+:root {
+	--scale: 2px;
+}
+
 .tooltip {
 	margin: auto;
-	padding: 4px 4px 0 4px;
 	position: absolute;
-	border: 2px solid;
+	border: var(--scale) solid;
 	border-image-slice: 1;
 	border-image-source: linear-gradient(to bottom, #26005FF5, #180035F5);
 	background-color: #100010F0;
@@ -14,23 +17,23 @@
 }
 .tooltip::before {
 	content: "";
-	width: calc(100% + 8px);
-	height: calc(100% + 8px);
-	left: -4px;
-	top: -4px;
+	width: calc(100% + 4 * var(--scale));
+	height: calc(100% + 4 * var(--scale));
+	left: calc(-2 * var(--scale));
+	top: calc(-2 * var(--scale));
 	position: absolute;
 	background: linear-gradient(
 			to bottom,
-			#100010F0 2px, transparent 0, transparent calc(100% - 2px),
-			#100010F0 calc(100% - 2px)
+			#100010F0 var(--scale), transparent 0, transparent calc(100% - var(--scale)),
+			#100010F0 calc(100% - var(--scale))
 		) no-repeat,
 		linear-gradient(
 			to left,
-			#100010F0 2px, transparent 0, transparent calc(100% - 2px),
-			#100010F0 calc(100% - 2px)
+			#100010F0 var(--scale), transparent 0, transparent calc(100% - var(--scale)),
+			#100010F0 calc(100% - var(--scale))
 		) no-repeat;
 	background-position: center;
 	background-size:
-		calc(100% - 4px),
-		100% calc(100% - 4px);
+		calc(100% - (2 * var(--scale))),
+		100% calc(100% - (2 * var(--scale)));
 }
