--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,7 +37,9 @@ body {
 	border: var(--scale) solid;
 	border-image-slice: 1;
 	border-image-source: linear-gradient(to bottom, #26005FF5, #180035F5);
+	opacity: 0;
 	background-color: #100010F0;
+	pointer-events: none;
 	z-index: 2;
 }
 #tooltip::before {
